--- a/app/src/main/res/layout/track_add_fragment.xml
+++ b/app/src/main/res/layout/track_add_fragment.xml
@@ -25,7 +25,7 @@
                 android:numColumns="3"
                 android:paddingBottom="5dp"
                 viewModel="@{vm}"
-                items="@{vm._lvCarrierList}"
+                items="@{vm.lvCarrierList}"
                 />
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -40,7 +40,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:paddingVertical="10dp"
-                    android:text="@{vm.lvPostNum}"
+                    android:text="@={vm.lvPostNum}"
                     android:textSize="18sp"
                     android:textColor="@color/c1"
                     android:textColorHint="@color/f2"
