--- a/app/src/main/res/layout/item_carrier.xml
+++ b/app/src/main/res/layout/item_carrier.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="vm"
-            type="com.example.findmypackage.ui.trackAdd.TrackAddViewModel"/>
+            type="com.example.findmypackage.ui.track.add.TrackAddViewModel"/>
         <variable
             name="item"
             type="com.example.findmypackage.data.local.Carrier"/>
