- Uniform PostNum, TrackNum, PostId to TrackId - Click on main screen item to view details Activity

--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -13,21 +13,29 @@
             type="com.example.findmypackage.data.db.track.TrackEntity"/>
     </data>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/tv_carrier_name"
-        android:gravity="center"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_item"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:paddingVertical="10dp"
-        android:paddingHorizontal="5dp"
+        android:layout_height="80dp"
         android:layout_marginBottom="20dp"
-        android:text="@{item.postNumber}"
-        android:singleLine="true"
-        android:textColor="@color/f1"
         android:background="@color/c1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        android:onClick="@{()->vm.onClickItem(item)}"
+        >
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tv_carrier_name"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@{item.trackId}"
+            android:textColor="@color/f1"
+            android:singleLine="true"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </layout>
