- Change App Main Color

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@color/f1"
         >
 
         <androidx.recyclerview.widget.RecyclerView
@@ -32,10 +32,11 @@
             android:layout_margin="20dp"
             android:padding="0dp"
             android:onClick="@{(v) -> vm.onClick(v)}"
+            android:backgroundTint="@color/c1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:icon="@android:drawable/ic_input_add"
-            app:iconTint="@color/white"
+            app:iconTint="@color/f1"
             app:iconSize="35dp"
             />
 
