--- a/app/src/main/res/layout/track_detail_fragment.xml
+++ b/app/src/main/res/layout/track_detail_fragment.xml
@@ -12,7 +12,7 @@
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"
+            android:background="@color/f1"
             android:orientation="vertical"
             android:gravity="center"
             >
